--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "@vitejs/plugin-react": "^5.1.0",
     "aws-cdk-lib": "^2.216.0",
     "constructs": "^10.4.3",
-    "esbuild": "^0.27.0",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
     "tsx": "^4.20.6",
     "typescript": "^5.9.3",
-    "vite": "^7.2.2"
+    "vite": "^7.2.2",
+    "esbuild": "0.25.12"
   }
 }
